@@ -46,6 +46,8 @@ C-API
 Library
 -------
 
+- Issue #6470: Drop UNC prefix in FixTk.
+
 - Issue #5610: feedparser no longer eats extra characters at the end of
   a body part if the body part ends with a \r\n.
 
